CORE-547 - Fixed horizontal column formatting on small screens

--- a/css/containers.less
+++ b/css/containers.less
@@ -106,6 +106,10 @@ body {
             padding-right: 0 !important;
         }
 
+        .mw-horizontal_flow > .row > * {
+            padding-left: 0;
+        }
+
     }
 
 }
